load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cell.go",
        "col.go",
        "datavalidation.go",
        "date.go",
        "file.go",
        "format_code.go",
        "hsl.go",
        "lib.go",
        "read.go",
        "reftable.go",
        "row.go",
        "sheet.go",
        "stream_file.go",
        "stream_file_builder.go",
        "style.go",
        "templates.go",
        "theme.go",
        "write.go",
        "xmlContentTypes.go",
        "xmlSharedStrings.go",
        "xmlStyle.go",
        "xmlTheme.go",
        "xmlWorkbook.go",
        "xmlWorksheet.go",
        "hyperlink.go",
        "content.go",
    ],
    importpath = "git.corp.zgcszkw.com/vendors/xlsx",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_extrame_goyymmdd//:go_default_library",
    ],
)
